test/scc/ext/tm/semantic-errors/016.t
void test()
{
    volatile int a[10];
    _Atomic
        a[0];
}